
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-08-15 DariusIII
	Fix: Move tv and movies UHD category checks before web-dl check.(fixes issue #2234)
		note: run misc/testing/Release/recategorize.php all
2016-08-08 DariusIII
	Chg: Remove rss button from search page in Gamma theme.
2016-08-08 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.3.1


2016-08-08 DariusIII
	Fix: Add checks for tv attributes in XML_Response.php(fixes issue #2225)
2016-08-07 niel
	Fix: Adjustments to DbUpdate class to be sure Settings instance is there when needed.
2016-08-05 DariusIII
	Fix: User cart operations in themes
2016-08-05 niel
	Fix: Changes to Install's bootstrap process that prevent use of Settings table before it is
		created.
2016-08-03 niel
	Mrg: PR 2194, from b3s3rk - Improve JSON Response from API/RSS by basing it off of XML Response
2016-08-02 DariusIII
	Chg: Make themes more lower resolution/mobile devices friendly
2016-08-01 DariusIII
	Fix: Add missing glyphicons-halflings images to shared/img folder and adjust css of Gamma theme
	Fix: Replace somehow reverted icon- with font-awesome versions in viewmoviefull and xxx tpl files in Alpha theme
2016-07-28 DariusIII
	Fix: Undefined index genreid in Charisma/Gamma/Gentele/Omicron themes (fixes issue #2209)
2016-07-28 bart39
	Fix: add required rt_att directive for sphinx v2.2.11
		Note: if using sphinx search the following is required to update the index
		sudo service sphinxsearch stop
		sudo mv /etc/sphinxsearch/sphinx.conf /etc/sphinxsearch/sphinx.conf.1
		sudo cp /var/www/nZEDb/misc/sphinxsearch/sphinx.conf /etc/sphinxsearch/sphinx.conf
		sudo service sphinxsearch start
		php misc/sphinxsearch/populate_rt_indexes.php releases_rt
2016-07-25 niel