@@ -1037,6 +1037,10 @@ class Categorize extends Category
 			$this->tmpCat = Category::XXX_SD;
 			return true;
 		}
+		if (preg_match('/SDPORN/i', $this->releaseName)) {
+			$this->tmpCat = Category::XXX_SD;
+			return true;
+		}
 		return false;
 	}
 
